Spring Boot - A Closer Look TODO-01: Add Spring Boot Plugin

--- a/32-jdbc-autoconfig/build.gradle
+++ b/32-jdbc-autoconfig/build.gradle
@@ -1,5 +1,4 @@
-// TO-DO-01 : Add the Spring Boot Plugin
-
+apply plugin: 'org.springframework.boot'
 
 dependencies {
     implementation project(':00-rewards-common')
