--- a/32-jdbc-autoconfig/pom.xml
+++ b/32-jdbc-autoconfig/pom.xml
@@ -55,9 +55,10 @@
 
     <build>
          <plugins>
-            <!-- TO-DO-01 : Add the Spring Boot Plugin - see detailed instructions
-                for the XML you need. -->
-
+             <plugin>
+                 <groupId>org.springframework.boot</groupId>
+                 <artifactId>spring-boot-maven-plugin</artifactId>
+             </plugin>
             <!-- Ensure resources are handled correctly -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
