Spring Boot - A Closer Look TODO-02: Refactor to Spring Boot Starters

--- a/32-jdbc-autoconfig/pom.xml
+++ b/32-jdbc-autoconfig/pom.xml
@@ -23,19 +23,14 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <!-- TO-DO-02 : Refactor from discrete Spring Framework
-             dependencies to JDBC and Test Spring Boot Starters -->
-
-        <!-- Needed for the Spring JdbcTemplate -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
-        <!-- Spring Integration testing support -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
