--- a/32-jdbc-autoconfig/build.gradle
+++ b/32-jdbc-autoconfig/build.gradle
@@ -2,10 +2,7 @@ apply plugin: 'org.springframework.boot'
 
 dependencies {
     implementation project(':00-rewards-common')
-
-    // TO-DO-02 : Refactor from discrete Spring Framework
-    // dependency to JDBC Boot Starter
-    implementation 'org.springframework:spring-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     
 }
 
