--- a/32-jdbc-autoconfig/src/main/resources/application.properties
+++ b/32-jdbc-autoconfig/src/main/resources/application.properties
@@ -15,6 +15,6 @@ logging.level.root=ERROR
 #   (Search for "Exclusions" section in the log.)
 #
 logging.level.rewards=INFO
-logging.level.config=INFO
+logging.level.config=DEBUG
 
 
