Spring Boot - Spring Data JPA TODO-07: Configure JPA

--- a/34-spring-data-jpa/src/test/resources/application.properties
+++ b/34-spring-data-jpa/src/test/resources/application.properties
@@ -14,3 +14,11 @@
 #   -   Run RewardNetworkTests. Verify it succeeds.
 #       (If you are using Gradle, comment out test exclude
 #        statement from the build.gradle before running the test.)
+
+spring.sql.init.schema-locations = classpath:/rewards/testdb/test-schema.sql
+spring.sql.init.data-locations = classpath:/rewards/testdb/test-data.sql
+
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
+
+spring.jpa.hibernate.ddl-auto = none
