Spring Boot - Actuator TODO-03: Expose HTTP actuator endpoints.

--- a/44-actuator/src/main/resources/application.properties
+++ b/44-actuator/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
 # - Try a metric: http://localhost:8080/actuator/metrics/jvm.memory.max
 # - But what about health endpoint?
 
+management.endpoints.web.exposure.include = beans, metrics
+
+
 # ----------------------------------------------------
 #
 # TO-DO-04: Expose all endpoints
