Spring Boot - Actuator TODO-04: Expose all HTTP actuator endpoints.

--- a/44-actuator/src/main/resources/application.properties
+++ b/44-actuator/src/main/resources/application.properties
@@ -12,9 +12,6 @@ spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
 # - Try a metric: http://localhost:8080/actuator/metrics/jvm.memory.max
 # - But what about health endpoint?
 
-management.endpoints.web.exposure.include = beans, metrics
-
-
 # ----------------------------------------------------
 #
 # TO-DO-04: Expose all endpoints
@@ -36,6 +33,8 @@ management.endpoints.web.exposure.include = beans, metrics
 #
 #   http://localhost:8080/notexistent (404 is expected)
 #   http://localhost:8080/actuator/metrics/http.server.requests?tag=status:404
+
+management.endpoints.web.exposure.include=*
 
 # ----------------------------------------------------
 # TO-DO-07 (Optional): Add additional properties to the info endpoint
