--- a/44-actuator/src/main/resources/application.properties
+++ b/44-actuator/src/main/resources/application.properties
@@ -43,6 +43,12 @@ management.endpoints.web.exposure.include=*
 #   or solution project for more detailed instruction
 # - Restart the application and access "info" endpoint and verify
 #   additional properties are displayed
+management.info.java.enabled=true
+
+management.info.env.enabled=true
+info.restaurant.location=New York
+info.restaurant.discountPercentage=10
+
 
 # ----------------------------------------------------
 #
