Spring Boot - Actuator TODO-14: Add more details to the health check

--- a/44-actuator/src/main/resources/application.properties
+++ b/44-actuator/src/main/resources/application.properties
@@ -57,6 +57,7 @@ info.restaurant.discountPercentage=10
 #   are always displayed
 # - Let the application restart (via Spring Boot devtools), verify
 #   health details get displayed
+management.endpoint.health.show-details=always
 
 # ----------------------------------------------------
 #
