Spring Boot - Actuator TODO-18/19: Repeat with restaurants in the database

--- a/44-actuator/src/main/resources/application.properties
+++ b/44-actuator/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.schema-locations=classpath:/rewards/testdb/schema.sql
 
-# Load the accounts only, no restaurant
-spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
+## Load the accounts only, no restaurant
+#spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
+
+# Load the accounts with restaurant
+spring.sql.init.data-locations=classpath:/data-with-restaurants.sql
 
 # TO-DO-03: Expose some endpoints
 # - Set appropriate property to expose beans and metrics endpoints
