Spring Boot - Actuator TODO-20: Organize Health Indicators into groups

--- a/44-actuator/src/main/resources/application.properties
+++ b/44-actuator/src/main/resources/application.properties
@@ -60,7 +60,7 @@ info.restaurant.discountPercentage=10
 #   are always displayed
 # - Let the application restart (via Spring Boot devtools), verify
 #   health details get displayed
-management.endpoint.health.show-details=always
+#management.endpoint.health.show-details=always
 
 # ----------------------------------------------------
 #
@@ -72,3 +72,9 @@ management.endpoint.health.show-details=always
 # - For "system" and "application" groups, configure "show-details" with "always"
 # - Remove "management.endpoint.health.show-details=always" you added earlier
 # - Restart the application and access health indicator of each group
+management.endpoint.health.group.system.include=diskspace, db
+management.endpoint.health.group.system.show-details=always
+management.endpoint.health.group.web.include=ping
+management.endpoint.health.group.application.include=restaurantHealthCheck
+management.endpoint.health..group.application.show-details=always
+
