--- a/44-actuator/pom.xml
+++ b/44-actuator/pom.xml
@@ -39,7 +39,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-         <!-- TO-DO-01: Note that the Actuator starter is already here for you. -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+
+        <!-- TO-DO-01: Note that the Actuator starter is already here for you. -->
           <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
