--- a/44-actuator/src/main/resources/application.properties
+++ b/44-actuator/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.schema-locations=classpath:/rewards/testdb/schema.sql
 
 ## Load the accounts only, no restaurant
-#spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
+spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
 
 # Load the accounts with restaurant
-spring.sql.init.data-locations=classpath:/data-with-restaurants.sql
+#spring.sql.init.data-locations=classpath:/data-with-restaurants.sql
 
 # TO-DO-03: Expose some endpoints
 # - Set appropriate property to expose beans and metrics endpoints
@@ -52,7 +52,6 @@ management.info.env.enabled=true
 info.restaurant.location=New York
 info.restaurant.discountPercentage=10
 
-
 # ----------------------------------------------------
 #
 # TO-DO-14: Display details of the health endpoint
@@ -76,5 +75,6 @@ management.endpoint.health.group.system.include=diskspace, db
 management.endpoint.health.group.system.show-details=always
 management.endpoint.health.group.web.include=ping
 management.endpoint.health.group.application.include=restaurantHealthCheck
-management.endpoint.health..group.application.show-details=always
+management.endpoint.health.group.application.show-details=always
+management.endpoint.health.group.application.status.order=NO_RESTAURANTS,down,out-of-service,unknown,up
 
