--- a/44-actuator/pom.xml
+++ b/44-actuator/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
         <!-- TO-DO-01: Note that the Actuator starter is already here for you. -->
           <dependency>
