--- a/44-actuator/src/main/resources/application.properties
+++ b/44-actuator/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.sql.init.data-locations=classpath:/data-no-restaurants.sql
 # Load the accounts with restaurant
 #spring.sql.init.data-locations=classpath:/data-with-restaurants.sql
 
+spring.jmx.enabled=true
+
 # TO-DO-03: Expose some endpoints
 # - Set appropriate property to expose beans and metrics endpoints
 # - Let the application restart (via Spring Boot devtools) and access
